Able to add bookmarks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,9 @@
       <li>
         <a href="/characters">Characters</a>
       </li>
+            <li>
+        <a href="/bookmarks">Bookmarks</a>
+      </li>
     </ul>
     <p style="color: green"><%= notice %></p> <!-- notice and alert showing in all the pages -->
     <p style="color: red"><%= alert %></p>
