--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -20,6 +20,16 @@
         </a>
       </div>
     </div>
+    <hr>
+
+    <form action="/add_bookmark">
+    User ID:
+      <input type="text" name="the_user_id">
+    Movie ID:  
+      <input type="text" name="the_movie_id">
+
+      <button>Bookmark this movie!</button>
+    </form>  
 
     <dl>
       <dt>
