Set before_action and sessions on all controllers

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,7 +1,8 @@
 <div>
   <div>
     <h1>
-      List of all bookmarks
+    <%= @current_user.first_name %>' bookmarks'
+      <!-- List of all bookmarks -->
     </h1>
   </div>
 </div>
