--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body>
     <ul>
       <!-- conditional for user sessions/remdering links -->
-      <% if session.fetch(:user_id) == nil %>
+      <% if @current_user == nil %>
       <li>
         <a href="/user_sign_up">User Sign Up</a>
       </li>
@@ -27,6 +27,9 @@
       <% else %>
       <li>
         <a href="/user_sign_out">User Sign Out</a>
+      </li>
+      <li>
+        <a href="/bookmarks">My Bookmarks</a>
       </li>
       <% end %>
       <li>
@@ -40,9 +43,6 @@
       </li>
       <li>
         <a href="/characters">Characters</a>
-      </li>
-            <li>
-        <a href="/bookmarks">Bookmarks</a>
       </li>
     </ul>
     <p style="color: green"><%= notice %></p> <!-- notice and alert showing in all the pages -->
