--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -16,24 +16,48 @@
     </h2>
 
     <form action="/insert_bookmark" method="post">
-      <div>
+      <!--<div>
         <label for="user_id_box">
           User
         </label>
 
         <input type="text" id="user_id_box" name="query_user_id">
-      </div>
+      </div>-->
 
       <div>
         <label for="movie_id_box">
           Movie
         </label>
 
-        <input type="text" id="movie_id_box" name="query_movie_id">
+        <!--<input type="text" id="movie_id_box" name="query_movie_id">-->
+
+        <select name="query_movie_id">
+        <% Movie.all.order(:title).each do |a_movie| %>
+          <option value="<%= a_movie.id %>">
+            <%= a_movie.title %>
+          </option>
+          <% end %>
+        </select>
+
+        <!--<select>
+          <option>1</option>
+          <option>2</option>
+          <option>alice</option>
+          <option>robert</option>
+        </select>-->
+
+        <!--<ul>
+        <% Movie.all.order(:title).each do |a_movie| %>
+          <li>
+            <%= a_movie.title %>
+          </li>
+          <% end %>
+        </ul>-->
+
       </div>
 
       <button>
-        Create bookmark
+        Bookmark this movie
       </button>
     </form>
   </div>
@@ -75,11 +99,13 @@
         </td>
 
         <td>
-          <%= a_bookmark.user_id %>
+          <%= a_bookmark.user.first_name %>
+          <%#= a_bookmark.user_id %>
         </td>
 
         <td>
-          <%= a_bookmark.movie_id %>
+          <%= a_bookmark.movie.title %>
+          <%#= a_bookmark.movie_id %>
         </td>
 
         <td>
@@ -93,6 +119,11 @@
           <a href="/bookmarks/<%= a_bookmark.id %>">
             Show details
           </a>
+        </td>
+        <td>
+          <a href="/delete_bookmark/<%= a_bookmark.id %>">
+          Un-bookmark
+        </a>
         </td>
       </tr>
       <% end %>
